--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ pyyaml==6.0.1
 requests==2.31.0
 python-dotenv==1.0.1
 Pillow==10.4.0
-acyncpg==0.28.0
+asyncpg==0.28.0
 qrcode==7.4.2
 aiohttp==3.8.6
